--- a/.env
+++ b/.env
@@ -34,3 +34,9 @@ DATABASE_URL="mysql://root:@127.0.0.1:3306/mate?serverVersion=10.4.19-Mariadb"
 ###> nelmio/cors-bundle ###
 CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
 ###< nelmio/cors-bundle ###
+
+###> lexik/jwt-authentication-bundle ###
+JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
+JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
+JWT_PASSPHRASE=04b2d1376d9356298d345ba021a41e9e
+###< lexik/jwt-authentication-bundle ###
