--- a/config/packages/api_platform.yaml
+++ b/config/packages/api_platform.yaml
@@ -1,7 +1,12 @@
 api_platform:
+    title: 'Hare_mate REST API'
+    description: 'API REST du plateforme Hare_mate'
     mapping:
         paths: ['%kernel.project_dir%/src/Entity']
     patch_formats:
         json: ['application/merge-patch+json']
     swagger:
         versions: [3]
+        api_keys:
+                name: Authorization
+                type: header
