--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -12,26 +12,32 @@ security:
             entity:
                 class: App\Entity\Utilisateur
                 property: email
+    
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
         
-        login :
-            pattern : ^/api/login 
-            stateless : true 
-            json_login :
-                check_path : /api/login_check
-                success_handler : lexik_jwt_authentication.handler.authentication_success 
-                failure_handler : lexik_jwt_authentication.handler.authentication_failure
-        api :
-            pattern :    ^/api 
-            stateless : true
-            jwt : ~
+        # login :
+        #     pattern : ^/api/login
+        #     stateless : true
+        #     provider: app_user_provider 
+        #     json_login :
+        #         check_path : /api/login_check
+        #         success_handler : lexik_jwt_authentication.handler.authentication_success 
+        #         failure_handler : lexik_jwt_authentication.handler.authentication_failure
+        # api :
+        #     pattern :    ^/api
+        #     stateless : true 
+        #     jwt : ~
 
         main:
             lazy: true
             provider: app_user_provider
+            json_login:
+                check_path: /api/login
+                success_handler: lexik_jwt_authentication.handler.authentication_success
+                failure_handler: lexik_jwt_authentication.handler.authentication_failure
             custom_authenticator: App\Security\UtilisateurAuthenticator
             logout:
                 path: app_logout
@@ -48,8 +54,8 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        - { path : ^/api/login, roles : IS_AUTHENTICATED_ANONYMOUSLY } 
-        - { path : ^/api, roles : IS_AUTHENTICATED_FULLY }
+        #- { path : ^/api/login, roles : IS_AUTHENTICATED_ANONYMOUSLY } 
+        #- { path : ^/api, roles : IS_AUTHENTICATED_FULLY }
         #- { path: ^/api, roles: ROLE_ADMIN }
         #- { path: ^/secteur, roles: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER }
